results/SVCOMP/conversational/log-ExSymExeBool-2024_03_12_05_45_30.txt
class Main {

  //@ ensures \result ==> test(y, x);
  //@ ensures !\result ==> !test(y, x);
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ requires true;
  //@ ensures \result ==> (x ==> true) && (!x ==> false);
  //@ ensures !\result ==> (x ==> false) && (!x ==> false);
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: cannot find symbol
  //@ ensures \result ==> test(y, x);
                               ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: cannot find symbol
  //@ ensures \result ==> test(y, x);
                                  ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:4: error: cannot find symbol
  //@ ensures !\result ==> !test(y, x);
                                 ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:4: error: cannot find symbol
  //@ ensures !\result ==> !test(y, x);
                                    ^
  symbol:   variable x
  location: class Main
4 errors

class Main {

  //@ ensures \result ==> test(true, 3);
  //@ ensures !\result ==> !test(true, 3);
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ requires true;
  //@ ensures \result ==> (x ==> true) && (!x ==> false);
  //@ ensures !\result ==> (x ==> false) && (!x ==> false);
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: non-static method test(boolean,int) cannot be referenced from a static context
  //@ ensures \result ==> test(true, 3);
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:4: error: non-static method test(boolean,int) cannot be referenced from a static context
  //@ ensures !\result ==> !test(true, 3);
                            ^
2 errors

class Main {

  //@ requires true;
  //@ ensures \result ==> (x ==> true) && (!x ==> false);
  //@ ensures !\result ==> (x ==> false) && (!x ==> false);
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ requires true;
  //@ ensures \result ==> (x ==> true) && (!x ==> false);
  //@ ensures !\result ==> (x ==> false) && (!x ==> false);
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:4: error: cannot find symbol
  //@ ensures \result ==> (x ==> true) && (!x ==> false);
                           ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:4: error: cannot find symbol
  //@ ensures \result ==> (x ==> true) && (!x ==> false);
                                            ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:5: error: cannot find symbol
  //@ ensures !\result ==> (x ==> false) && (!x ==> false);
                            ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:5: error: cannot find symbol
  //@ ensures !\result ==> (x ==> false) && (!x ==> false);
                                              ^
  symbol:   variable x
  location: class Main
4 errors

class Main {

  //@ requires true;
  //@ ensures \result ==> (true ==> true) && (!true ==> false);
  //@ ensures !\result ==> (true ==> false) && (!true ==> false);
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ requires true;
  //@ ensures \result ==> (x ==> true) && (!x ==> false);
  //@ ensures !\result ==> (x ==> false) && (!x ==> false);
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
